# Deux-salles-deux-ambiances

./: .gitignore  CMakeLists.txt  README.md
glimac/glimac/: FreeflyCamera.hpp  TrackballCamera.hpp
src/: main.cpp
src/shaders/: 3D.vs.glsl  color.fs.glsl  normals.fs.glsl  room1.fs.glsl  room1.vs.glsl  room2.fs.glsl  room2.vs.glsl  skybox.vs.glsl
